TextBox stuff, stuff visible by default (but hidden on window load) so windows designer actually shows something.

--- a/IHExt/App.xaml
+++ b/IHExt/App.xaml
@@ -2,7 +2,10 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:IHExt"
-             Startup="Application_Startup">
+             Startup="Application_Startup"
+             Activated="OnAppActivated"
+             Deactivated="OnAppDeactivated"
+             >
     <Application.Resources>
          
     </Application.Resources>
