--- a/IHExt/MainWindow.xaml
+++ b/IHExt/MainWindow.xaml
@@ -13,8 +13,9 @@
         >
     <Viewbox>
         <Canvas Name="MainCanvas" Width="1920" Height="1080" Background="Transparent" UseLayoutRounding="True" SnapsToDevicePixels="True">
+            <Rectangle Name="AnnounceLogBlockout" Fill="#FFF4F4F5" Height="332" Canvas.Left="44" Stroke="Black" Canvas.Top="596" Width="870"/>
+
             <Label Name="runningLabel"
-                Visibility="Hidden"
                 Content="IHExt for Infinite Heaven"
                 Foreground="White"
                 FontSize="25" 
@@ -29,7 +30,8 @@
                       BlurRadius="0.0" />
                 </Label.Effect>
             </Label>
-            <WrapPanel Visibility="Hidden"  Canvas.Left="45" Canvas.Top="545">
+            <!-- tex test of individual items -->
+            <WrapPanel Visibility="Hidden" Name="menuTestWrap" Canvas.Left="45" Canvas.Top="450">
                 <Label Name="menuLineOptionIndex"
                 Content="1"
                 Foreground="White"
@@ -115,7 +117,6 @@
 
 
             <Label x:Name="menuTitle"
-                   Visibility="Hidden"
                 Content="Some Menu test / Some other menu"
                 Foreground="White"
                 FontSize="20"
@@ -127,7 +128,6 @@
             </Label>
 
             <ListBox 
-                Visibility="Hidden"
                 Height="460"
             x:Name="menuItems"
             Foreground="White"
@@ -155,26 +155,26 @@
             </ListBox>
           
             <WrapPanel Name="menuWrap" 
-                     Visibility="Hidden"
                        Canvas.Left="45" Canvas.Top="550">
-                <Label x:Name="menuLine"
-                Content="1:Menu line test: 1:SomeSetting"
+                <TextBox x:Name="menuLine"
+                Text="1:Menu line test: 1:SomeSetting"
+                IsReadOnly="False"
                 Foreground="White"
                 FontSize="20"
-                VerticalAlignment="Center"
+                VerticalAlignment="Stretch"
+                
                 Canvas.Left="45" 
-                Canvas.Top="545">
-                    <Label.Background>
+                Canvas.Top="545" GotKeyboardFocus="OnGotKeyboardFocus" KeyDown="OnKeyDown">
+                    <TextBox.Background>
                         <SolidColorBrush Color="Black" Opacity="0.75" />
-                    </Label.Background>
-                </Label>
+                    </TextBox.Background>
+                </TextBox>
 
                 <ComboBox Name="menuSetting" IsEditable="True" FontSize="20" SelectedIndex="0" MinWidth="40" KeyDown="ComboBox_KeyDown" LostFocus="ComboBox_LostFocus">
                 </ComboBox>
             </WrapPanel>
 
             <TextBlock Name="menuHelp"
-            Visibility="Hidden"
             TextWrapping="WrapWithOverflow"
             Padding="10"
             Text="Some super long text and stuff that might describe and option. Yet more text letst see how this wraps. Some super long text and stuff that might describe and option. Yet more text letst see how this wraps. And more. Some super long text and stuff that might describe and option. Yet more text letst see how this wraps. How much more. Some super long text and stuff that might describe and option. Yet more text lets see how this wraps. So much more. Some super long text and stuff that might describe and option. Yet more text letst see how this wraps."
@@ -189,18 +189,7 @@
                 </TextBlock.Background>
             </TextBlock>
 
-            <TextBox Visibility="Hidden"
-                Name="inputLine"
-                MinWidth="36"
-                Foreground="Black"
-                Background="White"
-                FontSize="20" 
-                VerticalContentAlignment="Center"
-                Canvas.Left="45" 
-                Canvas.Top="545"
-                KeyDown="TextControl_OnEnter"
-                />
-            <Rectangle Name="AnnounceLogBlockout" Visibility="Hidden" Fill="#FFF4F4F5" Height="332" Canvas.Left="44" Stroke="Black" Canvas.Top="596" Width="870"/>
+
 
 
             <TreeView Visibility="Hidden" x:Name="treeView" Canvas.Left="636" Canvas.Top="49"
