Better handling of selecting menuLine text when giving focus via mouse click.

--- a/IHExt/MainWindow.xaml
+++ b/IHExt/MainWindow.xaml
@@ -164,7 +164,7 @@
                 VerticalAlignment="Stretch"
                 
                 Canvas.Left="45" 
-                Canvas.Top="545" GotKeyboardFocus="OnGotKeyboardFocus" KeyDown="OnKeyDown">
+                Canvas.Top="545" GotKeyboardFocus="OnGotKeyboardFocus" KeyDown="OnKeyDown" PreviewMouseLeftButtonDown="OnPreviewMouseLeftButtonDown">
                     <TextBox.Background>
                         <SolidColorBrush Color="Black" Opacity="0.75" />
                     </TextBox.Background>
